service-traffic.yml
apiVersion: v1
kind: Service
metadata: 
  name: app
  labels: 
    app: app
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector: 
    app: app
    #version: __version__
  type: LoadBalancer
