ingress-blue.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    cert-manager.io/issuer: letsencrypt-prod
    cert-manager.io/acme-challenge-type: http01    
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          service:
            name: app
            port:
              number: 80
        pathType: Prefix  
    host: app-blue.arruda.io
  tls:
    - hosts:
      - app-blue.arruda.io
      secretName: app-blue-tls
