ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - host: app.arruda.io
    http:
      paths:
      - path: /
        backend:
          service:
            name: app
            port:
              number: 80
        pathType: Prefix
