service-blue.yml
apiVersion: v1
kind: Service
metadata: 
  name: app-blue
  labels: 
    app: app
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector: 
    app: app
    #version: __version__
 # type: LoadBalancer

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-blue
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - host: app-blue.sample.com
    http:
      paths:
      - path: /
        backend:
          service:
            name: app-blue-green
            port:
              number: 80
        pathType: Prefix
